[gd_scene load_steps=8 format=3 uid="uid://c4u75bhoaj37n"]

[ext_resource type="Script" path="res://Scripts/Pause_Menu.gd" id="1_85plj"]
[ext_resource type="Shader" path="res://Shaders/blur.gdshader" id="2_ixcch"]
[ext_resource type="PackedScene" uid="uid://c4ak3ly5n4yiy" path="res://Scenes/Options_Menu.tscn" id="3_xndjc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ea4gg"]
shader = ExtResource("2_ixcch")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_xtiet"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lhjhf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5vfdd"]
_data = {
"RESET": SubResource("Animation_lhjhf"),
"blur": SubResource("Animation_xtiet")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_85plj")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ea4gg")
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.5
offset_top = -79.5
offset_right = 144.5
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "= PAUSE ="
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Restart" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="MainMenu" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Main menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5vfdd")
}

[node name="OptionsMenu" parent="." instance=ExtResource("3_xndjc")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
